--- a/fotos.html
+++ b/fotos.html
@@ -12,4 +12,9 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   </body>
+  <script>
+    !function() {
+      window.location.replace("https://geildanke.com");
+    }();
+  </script>
 </html> 
